--- a/sqlite3_exercises.ipynb
+++ b/sqlite3_exercises.ipynb
@@ -22,7 +22,8 @@
     "colab": {
       "name": "sqlite3-exercises-empty.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     }
   },
   "cells": [
@@ -116,10 +117,10 @@
         "id": "squyk6y1qcZ_"
       },
       "source": [
-        "import #preencha aqui#\n",
+        "import sqlite3\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -138,9 +139,9 @@
         "id": "A_rkQoxLqcaA"
       },
       "source": [
-        "conn = sqlite3. ...('olist_ecommerce.db')"
+        "conn = sqlite3.connect('olist_ecommerce.db')"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -169,7 +170,7 @@
         "    cursor.close()\n",
         "    return df"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -189,7 +190,7 @@
       "source": [
         "pd.set_option(\"display.max_rows\",7)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -205,91 +206,37 @@
       "cell_type": "code",
       "metadata": {
         "id": "LlkLz5ltqcaC",
-        "outputId": "df1949dc-887b-4a7d-f481-6decbc13ad72"
+        "outputId": "75eb1ff9-6ca1-4011-fd8e-cbe6ccb0a18e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
       },
       "source": [
-        "consulta('''SELECT name FROM sqlite_master WHERE type='table';''')"
+        "consulta('''SELECT name FROM olist.sqlite_master WHERE type='table';''')"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>name</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>olist_customers_dataset</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>olist_geolocation_dataset</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>olist_order_items_dataset</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>olist_orders_dataset</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>olist_products_dataset</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>product_category_name_translation</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>8 rows × 1 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                                 name\n",
-              "0             olist_customers_dataset\n",
-              "1           olist_geolocation_dataset\n",
-              "2           olist_order_items_dataset\n",
-              "..                                ...\n",
-              "5                olist_orders_dataset\n",
-              "6              olist_products_dataset\n",
-              "7   product_category_name_translation\n",
-              "\n",
-              "[8 rows x 1 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 57
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-99f9ddee0ea5>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    ATTACH olist_ecommerce.db as olist;\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pw3F59gn87ni"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -782,6 +729,47 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zjpd0-ch9vIN",
+        "outputId": "0ec53fdd-4d79-4d92-a8b9-b45829c14aa6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 384
+        }
+      },
+      "source": [
+        "consulta('''SELECT * from olist_order_payments_dataset \n",
+        "             where payment_value >500 \n",
+        "             and payment_type = \"credit_card\"''')"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ERROR:root:An unexpected error occurred while tokenizing input\n",
+            "The following traceback may be corrupted or invalid\n",
+            "The error message is: ('EOF in multi-line string', (1, 46))\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "OperationalError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-35bb54f68f4a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m consulta('''SELECT * from olist_order_payments_dataset \n\u001b[1;32m      2\u001b[0m              \u001b[0mwhere\u001b[0m \u001b[0mpayment_value\u001b[0m \u001b[0;34m>\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m              and payment_type == \"credit_card\"''')\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-6-d86df19ee199>\u001b[0m in \u001b[0;36mconsulta\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mconsulta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcursor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mconsult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconsult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconsult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mOperationalError\u001b[0m: no such table: olist_order_payments_dataset"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "EjOVwkA2qcaH"
@@ -920,6 +908,48 @@
             "tags": []
           },
           "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kBIAivkQ--hU",
+        "outputId": "93be3ca2-abda-4066-f437-c52e3bb91851",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 384
+        }
+      },
+      "source": [
+        "consulta('''SELECT * from olist_order_payments_dataset \n",
+        "            ...\n",
+        "            order by payment_value DESC\n",
+        "            limit 5''')"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ERROR:root:An unexpected error occurred while tokenizing input\n",
+            "The following traceback may be corrupted or invalid\n",
+            "The error message is: ('EOF in multi-line string', (1, 19))\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "OperationalError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-bd3515a455d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m             \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m             \u001b[0morder\u001b[0m \u001b[0mby\u001b[0m \u001b[0mpayment_value\u001b[0m \u001b[0mDESC\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m             limit 5''')\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-6-d86df19ee199>\u001b[0m in \u001b[0;36mconsulta\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mconsulta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcursor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mconsult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconsult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconsult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mOperationalError\u001b[0m: near \".\": syntax error"
+          ]
         }
       ]
     },
