--- a/sqlite3_exercises.ipynb
+++ b/sqlite3_exercises.ipynb
@@ -120,7 +120,7 @@
         "import sqlite3\n",
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
       "source": [
         "conn = sqlite3.connect('olist_ecommerce.db')"
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
         "    cursor.close()\n",
         "    return df"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
       "source": [
         "pd.set_option(\"display.max_rows\",7)"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -206,37 +206,122 @@
       "cell_type": "code",
       "metadata": {
         "id": "LlkLz5ltqcaC",
-        "outputId": "75eb1ff9-6ca1-4011-fd8e-cbe6ccb0a18e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 129
-        }
+          "height": 49
+        },
+        "outputId": "1e38466e-71d5-4657-a995-fe41e4e571f0"
       },
       "source": [
-        "consulta('''SELECT name FROM olist.sqlite_master WHERE type='table';''')"
+        "consulta('''SELECT name FROM sqlite_master WHERE type='table';''')"
       ],
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-99f9ddee0ea5>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    ATTACH olist_ecommerce.db as olist;\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: [name]\n",
+              "Index: []"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pw3F59gn87ni"
+        "id": "pw3F59gn87ni",
+        "outputId": "04d426a8-fa2d-4864-ca57-b827f8f90b66",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 49
+        }
       },
       "source": [
-        ""
+        "consulta('pragma table_info(olist_orders_dataset)')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>cid</th>\n",
+              "      <th>name</th>\n",
+              "      <th>type</th>\n",
+              "      <th>notnull</th>\n",
+              "      <th>dflt_value</th>\n",
+              "      <th>pk</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: [cid, name, type, notnull, dflt_value, pk]\n",
+              "Index: []"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -732,18 +817,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "Zjpd0-ch9vIN",
-        "outputId": "0ec53fdd-4d79-4d92-a8b9-b45829c14aa6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 384
-        }
+        },
+        "outputId": "0ec53fdd-4d79-4d92-a8b9-b45829c14aa6"
       },
       "source": [
         "consulta('''SELECT * from olist_order_payments_dataset \n",
         "             where payment_value >500 \n",
         "             and payment_type = \"credit_card\"''')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -915,11 +1000,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "kBIAivkQ--hU",
-        "outputId": "93be3ca2-abda-4066-f437-c52e3bb91851",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 384
-        }
+        },
+        "outputId": "93be3ca2-abda-4066-f437-c52e3bb91851"
       },
       "source": [
         "consulta('''SELECT * from olist_order_payments_dataset \n",
@@ -927,7 +1012,7 @@
         "            order by payment_value DESC\n",
         "            limit 5''')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
