--- a/sqlite3_exercises.ipynb
+++ b/sqlite3_exercises.ipynb
@@ -120,7 +120,7 @@
         "import sqlite3\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -139,9 +139,9 @@
         "id": "A_rkQoxLqcaA"
       },
       "source": [
-        "conn = sqlite3.connect('olist_ecommerce.db')"
+        "conn = sqlite3.connect('olist_ecommerce_antiga.db')"
       ],
-      "execution_count": 2,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
         "    cursor.close()\n",
         "    return df"
       ],
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
       "source": [
         "pd.set_option(\"display.max_rows\",7)"
       ],
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -208,14 +208,14 @@
         "id": "LlkLz5ltqcaC",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 49
+          "height": 295
         },
-        "outputId": "1e38466e-71d5-4657-a995-fe41e4e571f0"
+        "outputId": "ebfd063c-32ad-4c1d-fc9d-75f17671bb29"
       },
       "source": [
         "consulta('''SELECT name FROM sqlite_master WHERE type='table';''')"
       ],
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -243,83 +243,56 @@
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "Empty DataFrame\n",
-              "Columns: [name]\n",
-              "Index: []"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pw3F59gn87ni",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 49
-        },
-        "outputId": "04d426a8-fa2d-4864-ca57-b827f8f90b66"
-      },
-      "source": [
-        "consulta('pragma table_info(olist_orders_dataset)')"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>cid</th>\n",
-              "      <th>name</th>\n",
-              "      <th>type</th>\n",
-              "      <th>notnull</th>\n",
-              "      <th>dflt_value</th>\n",
-              "      <th>pk</th>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>olist_customers_dataset</td>\n",
               "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>olist_geolocation_dataset</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>olist_order_items_dataset</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>olist_orders_dataset</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>olist_products_dataset</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>product_category_name_translation</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>8 rows × 1 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "Empty DataFrame\n",
-              "Columns: [cid, name, type, notnull, dflt_value, pk]\n",
-              "Index: []"
+              "                                 name\n",
+              "0             olist_customers_dataset\n",
+              "1           olist_geolocation_dataset\n",
+              "2           olist_order_items_dataset\n",
+              "..                                ...\n",
+              "5                olist_orders_dataset\n",
+              "6              olist_products_dataset\n",
+              "7   product_category_name_translation\n",
+              "\n",
+              "[8 rows x 1 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 17
         }
       ]
     },
@@ -459,6 +432,149 @@
             "tags": []
           },
           "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "et0-dx_6yqGj"
+      },
+      "source": [
+        "Resposta:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jbFvDw8yyvYJ",
+        "outputId": "ddaee393-f925-4a70-f187-0e29bcf5ecac",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 295
+        }
+      },
+      "source": [
+        "consulta('pragma table_info(olist_orders_dataset)')"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>cid</th>\n",
+              "      <th>name</th>\n",
+              "      <th>type</th>\n",
+              "      <th>notnull</th>\n",
+              "      <th>dflt_value</th>\n",
+              "      <th>pk</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>order_id</td>\n",
+              "      <td>TEXT</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>customer_id</td>\n",
+              "      <td>TEXT</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>order_status</td>\n",
+              "      <td>TEXT</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>5</td>\n",
+              "      <td>order_delivered_carrier_date</td>\n",
+              "      <td>TEXT</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>6</td>\n",
+              "      <td>order_delivered_customer_date</td>\n",
+              "      <td>TEXT</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>7</td>\n",
+              "      <td>order_estimated_delivery_date</td>\n",
+              "      <td>TEXT</td>\n",
+              "      <td>0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>8 rows × 6 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    cid                           name  type  notnull dflt_value  pk\n",
+              "0     0                       order_id  TEXT        0       None   0\n",
+              "1     1                    customer_id  TEXT        0       None   0\n",
+              "2     2                   order_status  TEXT        0       None   0\n",
+              "..  ...                            ...   ...      ...        ...  ..\n",
+              "5     5   order_delivered_carrier_date  TEXT        0       None   0\n",
+              "6     6  order_delivered_customer_date  TEXT        0       None   0\n",
+              "7     7  order_estimated_delivery_date  TEXT        0       None   0\n",
+              "\n",
+              "[8 rows x 6 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
         }
       ]
     },
